fix themetoggle position on mobile

--- a/app/styles/expenses.css
+++ b/app/styles/expenses.css
@@ -44,8 +44,12 @@
   opacity: 0.3;
 }
 
-::-webkit-calendar-picker-indicator {
-  filter: invert(0.8);
+.dark ::-webkit-calendar-picker-indicator {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" viewBox="0 0 24 24"><path fill="%2300ccff" d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 18H4V8h16v13z"/></svg>');
+}
+
+.light ::-webkit-calendar-picker-indicator {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" viewBox="0 0 24 24"><path fill="%232671f4" d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 18H4V8h16v13z"/></svg>');
 }
 
 .datepicker:focus,
@@ -157,7 +161,7 @@
     flex-basis: 8rem;
   }
 
-  .category-indicator{
-    display:none;
+  .category-indicator {
+    display: none;
   }
 }
