--- a/app/styles/utils.css
+++ b/app/styles/utils.css
@@ -122,6 +122,6 @@
 
 @media (max-width: 560px) {
   .p-5 {
-    padding: 4em 2em;
+    padding: 5em 2em;
   }
 }
